<resources>
    <string name="app_name">One UI Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plusOrSub">+/-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="percent">%</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="clean">C</string>
    <string name="delete">←</string>
    <string name="historyContentDescription">Show operation history.</string>
</resources>
