<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:singleLine="true"
            android:ellipsize="start"
            android:gravity="center_vertical|right"
            android:fontFamily="sans-serif-light"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/textView_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_vertical|right"
            android:fontFamily="sans-serif-light"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <ImageButton
            android:id="@+id/imgBtn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_history_selector" />
        <ImageButton
            android:id="@+id/imgBtn_ruler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ruler_selector"/>
        <ImageButton
            android:id="@+id/imgBtn_science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_science_selector"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <ImageButton
                android:id="@+id/imgBtn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_delete_selector"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/line">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_clean"
                style="@style/ButtonCleanTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/clean" />

            <Button
                android:id="@+id/btn_left_bracket"
                style="@style/ButtonOperatorTheme"
                android:background="@drawable/button_num_selector"
                android:textSize="26dp"
                android:text="@string/left_bracket" />

            <Button
                android:id="@+id/btn_right_bracket"
                style="@style/ButtonOperatorTheme"
                android:background="@drawable/button_num_selector"
                android:textSize="26dp"
                android:text="@string/right_bracket" />

            <Button
                android:id="@+id/btn_div"
                style="@style/ButtonOperatorTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_7"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_8"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_9"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btn_mul"
                style="@style/ButtonOperatorTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/mul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_4"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_5"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_6"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/six" />

            <Button
                android:id="@+id/btn_sub"
                style="@style/ButtonOperatorTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/sub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_1"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_2"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_3"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/three" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/ButtonOperatorTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/plus" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_plusOrSub"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/plusOrSub" />

            <Button
                android:id="@+id/btn_0"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btn_dot"
                style="@style/ButtonNumTheme"
                android:background="@drawable/button_num_selector"
                android:text="@string/dot" />

            <Button
                android:id="@+id/btn_equal"
                style="@style/ButtonEqualTheme"
                android:background="@drawable/button_equal_selector"
                android:text="@string/equal" />
        </LinearLayout>

        <!--嵌套控件测试-->
        <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--xmlns:tools="http://schemas.android.com/tools"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--tools:context=".MainActivity" >-->

            <!--<TextView-->
                <!--android:id="@+id/textView1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignTop="@id/button1"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="hello"-->
                <!--android:textSize="60dp">-->
            <!--</TextView>-->

            <!--<Button-->
                <!--android:id="@+id/button1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Button" />-->

        <!--</RelativeLayout>-->

    </LinearLayout>


    <!--<LinearLayout-->
    <!--android:id="@+id/btn_linearLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_weight="0.6"-->
    <!--android:layout_margin="10dp">-->

    <!--</LinearLayout>-->

    <!--<TableLayout-->
    <!--android:id="@+id/btn_tableLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="0.5"-->
    <!--android:stretchColumns="*"-->
    <!--android:layout_margin="10dp">-->

    <!--<TableRow-->
    <!--android:gravity="center">-->
    <!--<Button-->
    <!--android:id="@+id/btn_delete"-->
    <!--android:layout_column="3"-->
    <!--android:text="←"/>-->

    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:gravity="center">-->
    <!--<Button-->
    <!--android:id="@+id/btn_clear"-->
    <!--android:layout_column="0"-->
    <!--android:text="C"-->
    <!--android:layout_margin="0dp"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_bracket"-->
    <!--android:layout_column="1"-->
    <!--android:text="()"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_percent"-->
    <!--android:layout_column="2"-->
    <!--android:text="%"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_div"-->
    <!--android:layout_column="3"-->
    <!--android:text="÷"/>-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:gravity="center">-->
    <!--<Button-->
    <!--android:id="@+id/btn_7"-->
    <!--android:layout_column="0"-->
    <!--android:text="7"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_8"-->
    <!--android:layout_column="1"-->
    <!--android:text="8"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_9"-->
    <!--android:layout_column="2"-->
    <!--android:text="9"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_mul"-->
    <!--android:layout_column="3"-->
    <!--android:text="×"/>-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:gravity="center">-->
    <!--<Button-->
    <!--android:id="@+id/btn_4"-->
    <!--android:layout_column="0"-->
    <!--android:text="4"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_5"-->
    <!--android:layout_column="1"-->
    <!--android:text="5"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_6"-->
    <!--android:layout_column="2"-->
    <!--android:text="6"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_sub"-->
    <!--android:layout_column="3"-->
    <!--android:text="-"/>-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:gravity="center">-->
    <!--<Button-->
    <!--android:id="@+id/btn_1"-->
    <!--android:layout_column="0"-->
    <!--android:text="1"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_2"-->
    <!--android:layout_column="1"-->
    <!--android:text="2"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_3"-->
    <!--android:layout_column="2"-->
    <!--android:text="3"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_plus"-->
    <!--android:layout_column="3"-->
    <!--android:text="+"/>-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:gravity="center">-->
    <!--<Button-->
    <!--android:id="@+id/btn_plusOrSub"-->
    <!--android:layout_column="0"-->
    <!--android:text="+/-"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_0"-->
    <!--android:layout_column="1"-->
    <!--android:text="0"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_dot"-->
    <!--android:layout_column="2"-->
    <!--android:text="."/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_equal"-->
    <!--android:layout_column="3"-->
    <!--android:text="="/>-->
    <!--</TableRow>-->
    <!--</TableLayout>-->


</LinearLayout>